test/soya/error/samename.soy
class point {
 attribute int val;

  method void constructor (int val){
    this.val = val;
  }

}

class point {
 attribute bool val;

  method void constructor (bool val){
    this.val = val;
  }

}
